# trajectory_generator

./: .gitignore  README.md  bicycle_path.py  bicycle_path_2.py  bicycle_trajectory.py  bicycle_trajectory_2.py  bicycle_trajectory_3.py  boat_path.py  boat_trajectory.py  evaluate_jerk_data.py  fixed_wing_trajectory.py  plot_sideslip.py  pose_to_numpy.py  profilelog  smooth_data_filter.py  test_2D_paths.py  test_2D_trajectory.py  test_centr_accel_const.py  test_concatenater.py  test_creating_sequence_paths_2D.py  test_derivative_constraints.py  test_drone_hunter_trajectories copy.py  test_drone_hunter_trajectories.py  test_drone_hunter_trajectories_dataset.py  test_drone_hunter_trajectories_orbit.py  test_intermediate_waypoints.py  test_obstacle_paths_2D.py  test_obstacle_trajectory_2D.py  test_sfc_paths_3D.py  test_sfc_trajectory_3D.py  test_smoothing_spline.py  test_spline_concatenater.py  test_spline_data_concatenater.py  unicycle_path.py  unicycle_trajectory.py  unicycle_trajectory_2.py
TrajectoryConstraintsCCode/: CMakeLists.txt
TrajectoryConstraintsCCode/python_wrappers/: obstacle_constraints.py  turning_constraints.py
TrajectoryConstraintsCCode/src/: CMakeLists.txt  CrossTermBounds.cpp  CrossTermBounds.hpp
legacy/: smoothing_spline.py  test_smoothing_spline.py
trajectory_generation/: bspline_to_bezier.py  dynamic_bounds.py  matrix_evaluation.py  objective_functions.py  objective_variables.py  path_generator.py  piece_wise_trajectory_generator.py  smoothing_spline.py  spline_concatenater.py  spline_data_concatenater.py  spline_order_converter.py  trajectory_generator.py  trajectory_generator_2.py  trajectory_generator_cvxopt.py  trajectory_generator_orbit.py  waypoint_data.py
trajectory_generation/constraint_functions/TrajectoryConstraintsCCode/src/: CBindHelperFunctions.cpp  CMakeLists.txt  ControlPointDerivativeBounds.cpp  CrossTermBounds.cpp  CrossTermBounds.hpp  CrossTermProperties.cpp  DerivativeBounds.cpp  DerivativeBounds.hpp  MDMAlgorithmClass.cpp
(+31 files in other folders)
